[tool.poetry]
name = "upload-path-pyramid"
version = "0.1.0"
description = "A small utility function to create path of a uploaded file."
authors = ["Surya Teja <94suryateja@gmail.com>"]
license = "MIT"
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.8",
	"Framework :: Pyramid",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
	"License :: MIT",
]
homepage = "https://github.com/suryasr007/upload-path-pyramid"
keywords = ["pyramid", "upload-path", "media form upload"]

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.761"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
